# hr-feedback-processing

./: .gitignore  Dockerfile  Pipfile  README.md  app.py  pyproject.toml
factories/: slack_factory.py
utilities/: slack.py
